# SCA

./: CMakeLists.txt  main.cpp
Include/SCA/Resources/: ManagedResource.hpp  Resources.hpp  Utils.hpp
Include/SCA/Resources/Registry/: Delegate.hpp  Entry.hpp
Include/SCA/Resources/Text/: TextResource.hpp
Include/SCA/Utils/: Macro.hpp
Include/SCA/Utils/Delegate/: IDelegate.hpp  MethodDelegate.hpp
